--- a/app/index.html
+++ b/app/index.html
@@ -139,8 +139,7 @@
         <div class="container">
         <h2>Sign Up Today</h2>
         <form>
-        <input placeholder="First" type="text" name="firstname">
-         <input placeholder="Last" type="text" name="lastname">
+         <input placeholder="Name" type="text" name="name">
         <br>
         <input placeholder="Email" type="text" name="email">
         <br>
