made home page responsive

--- a/app/index.html
+++ b/app/index.html
@@ -24,9 +24,11 @@
     <!--[if lt IE 10]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+    <a href="#"><img src="svg/mobile-menu.svg" class="mobile-menu"/></a>
     <div class="header">
         <div class="container">
             <ul class="nav nav-pills pull-right">
+                <li><img src="svg/mobile-x.svg" class="mobile-x"/></li>
                 <li><a href="#">ABOUT</a></li>
                 <li><a href="#">FEATURES</a></li>
                 <li><a href="#">PRICING</a></li>
@@ -56,7 +58,7 @@
           <div class="row">
             <div class="col-md-4">
             <h3>Non-Profit</h3>
-             <!-- MOUNTAINS --> <svg id="mountains" xmlns=http://www.w3.org/2000/svg xmlns:xlink=http://www.w3.org/1999/xlink version=1.1 x=0 y=0 viewBox="0 0 156.8 122.7" enable-background="new 0 0 156.8 122.7" xml:space=preserve preserveAspectRatio="xMidYMid meet"><g id=flag><polygon fill=none stroke=#2DA3DA stroke-width=2 stroke-miterlimit=10 points="93.4 2.2 103.7 18.3 86.3 20.5 "/><line fill=#FFFFFF stroke=#2DA3DA stroke-width=2 stroke-miterlimit=10 x1=94 y1=0.5 x2=81.9 y2="31.7"/></g><g id=mountain-left><g><polygon fill=#FFFFFF stroke=#2DA3DA stroke-width=2 stroke-miterlimit=10 points="1.6 121.7 29.2 67.2 56.9 121.7 "/><polyline fill=#FFFFFF stroke=#2DA3DA stroke-width=2 stroke-miterlimit=10 points="20.7 84 25.6 89.5 28.8 85.9 32.7 90.4 38 84.3 "/></g></g><g id=mountain-right><g><polygon fill=#FFFFFF stroke=#2DA3DA stroke-width=2 stroke-miterlimit=10 points="75.1 121.7 115.1 42.7 155.1 121.7 "/><polyline fill=#FFFFFF stroke=#2DA3DA stroke-width=2 stroke-miterlimit=10 points="102.8 67 109.9 75.1 114.4 69.9 120.1 76.3 127.8 67.5 "/></g></g><g id=mountain-middle><g><polygon fill=#FFFFFF stroke=#2DA3DA stroke-width=2 stroke-miterlimit=10 points="20.4 121.7 73.8 16.4 127.1 121.7 "/><polyline fill=#FFFFFF stroke=#2DA3DA stroke-width=2 stroke-miterlimit=10 points="57.3 48.9 66.7 59.6 72.9 52.6 80.4 61.2 90.7 49.4 "/></g></g></svg> 
+          
             <h4>Make your data<br /> credible</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea comm.</p>
              <p><a class="hollow-button" href="#">GET STARTED</a></p>
@@ -113,7 +115,7 @@
         </div>
     </div> <!-- END MORE ABOUT -->
 
-    <div id="values">
+   <!--  <div id="values">
         <div class="container">
             <div class="row">
         <h2>Our Core Values</h2>
@@ -132,7 +134,7 @@
             </div>
             </div>
             </div>
-    </div>
+    </div> -->
 
     <div id="signup">
 
